2.12.4 (17.10.2021):

* Fixed writing text layer to DjVu where tesseract used text type "header".


2.12.3 (17.09.2021):

* Fixed pan/pan & select mismatch in defaults for toolbar icon and image
  control. Now both default to pan & select tool.
* Remember selected image control tool between sessions.
* Ensure that all intermediate TIFFs are written with only one strip to avoid
  triggering bug in PDF::Builder creating corrupt PDF
* Update debian/control to depend on libpdf-builder-perl >= 3.022.
  Closes bug #392. Thanks to Fab Stz for the report
* Update to Occitan (post 1500) translation (thanks to Quentin PAGÈS)


2.12.2 (01.07.2021):

* + support for opencl-enabled tesseract. Closes bug #386
  (gscan2pdf needs help parsing output from opencl-enabled tesseract).
  Thanks to Sean Dreilinger for the patch.
* Fixed page numbering when reordering pages. Closes bug #379
  (Inconsistent handling of page numbers when reordering PDF pages)
* Update to Hungarian translation (thanks to csola)
* Update to Spanish translation (thanks to rodroes)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.12.1 (22.04.2021):

* Remove 'use lib' line with local, user-based path.
  Closes bug #384. Thanks to Petr Písař for the report.
* Move postprocessing options to separate tab. Closes Debian bug #987211
  (gscan2pdf: separate tab for Post-processing options in Scan dialog)
  Thanks to Peter Marschall for the patch.
* Refactor "Threshold before OCR" options into one line.
  Closes Debian bug #987212 (gscan2pdf: visually align 'Threshold before OCR')
  Thanks to Peter Marschall for the patches.
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Matthias Sprau)


2.12.0 (18.04.2021):

* Enabled subject and keywords in filename template.
* Switch from Perlmagick to imagemagick for threshold steps of OCR to improve
  performance.
* + annotation layer for DjVu and PDF.