@@ -1,6 +1,7 @@
 2.12.4 (17.10.2021):
 
 * Fixed writing text layer to DjVu where tesseract used text type "header".
+* Dropped support for ocropus.
 
 
 2.12.3 (17.09.2021):
